ingress/heyhey/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-nginx
spec:
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 3000
